# tml-workshop

./: .env.sample  main.py  pyproject.toml
app/: __init__.py  agent.py  records.py
app/models/: __init__.py
app/prompts/: action.py  ingestion.py  master.py  notification.py  validation.py
app/sub_agents/: action.py  ingestion.py  notification.py  validation.py
app/tools/: action.py  ingestion.py  notification.py  validation.py
models/: __init__.py
prompts/: notification.py  validation.py  validation_prompt.py
sub_agents/: ingestion.py  notification.py  validation.py
